# teste

./: .gitignore  CMakeLists.txt  README.md  a.yml  mimeapps.list  mimeapps_old.list  read.md  setup.sh  setup.yml
alacritty/.config/alacritty/: alacritty.toml
bash/: .bash_profile  .bashrc
bash/.config/.bashrc.d/: aliases  config  envs
dwm/.config/dwm/: config.def.h  config.def.h.orig  config.h
dwm/.config/dwm/scripts/: refresh.sh  status.sh
etc/etc/: vconsole.conf
etc/etc/default/: grub
git/: .gitconfig
gtk/.config/gtk-3.0/: bookmarks
hypr/.config/hypr/: hyprland.conf  hyprpaper.conf  init.sh  printscreen.sh  slideshow.sh
kitty/.config/kitty/: kitty.conf
nvim/.config/nvim/: lazy-lock.json
nvim/.config/nvim/lua/: options.lua
nvim/.config/nvim/lua/lucapcf/: init.lua  remap.lua
nvim/.config/nvim/lua/plugins/: vimBeGood.lua
picom/.config/picom/: picom.conf
scripts/scripts/: blue  fehbg_fixed  fehbg_slideshow  linkdisplay  removedisplay  start_menu
shaders/: triangle.frag  triangle.vert
slock/.config/slock/: config.h
src/: main.cpp
src/math/: mat4.h  vec3.h
usr/usr/share/: i3status.conf
waybar/.config/waybar/: config  style.css
wofi/.config/wofi/: config  style.css
x11/: .xbindkeysrc  .xinitrc
